test/libsolidity/syntaxTests/literalSuffixes/application/invalid_suffixed_enum_member.sol
enum E {A, B, C}

function suffix(E) pure returns (E) {}

contract C {
    E e = E.A suffix;
}
// ----
// ParserError 2314: (85-91): Expected ';' but got identifier
